--- a/main.html
+++ b/main.html
@@ -192,7 +192,7 @@ family=Poppins:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
                         <img src="Images/r1.jpg" alt="">
                     </div>
                     <div class="bxx-text">
-                        <h4>John Karahan</h4>
+                        <h4>China Town</h4>
                         <h5>Food Vlogger</h5>
                         <div class="ratings">
                             <a href="#"><i class='bx bxs-star'></i></a>
@@ -214,7 +214,7 @@ family=Poppins:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
                         <img src="Images/r2.jpg" alt="">
                     </div>
                     <div class="bxx-text">
-                        <h4>John Karahan</h4>
+                        <h4>China Town</h4>
                         <h5>Food Vlogger</h5>
                         <div class="ratings">
                             <a href="#"><i class='bx bxs-star'></i></a>
@@ -237,7 +237,7 @@ family=Poppins:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
                         <img src="Images/r3.jpg" alt="">
                     </div>
                     <div class="bxx-text">
-                        <h4>John Karahan</h4>
+                        <h4>China Town</h4>
                         <h5>Food Vlogger</h5>
                         <div class="ratings">
                             <a href="#"><i class='bx bxs-star'></i></a>
